<resources>
    <string name="app_name">Paranoid Android</string>
    <string name="btn_newGame">New Game</string>
    <string name="btn_scores">High Scores</string>
    <string name="btn_settings">Settings</string>
    <string name="header_name">Name</string>
    <string name="header_score">Score</string>

    <string name="btnSubmit">Submit</string>
    <string name="btnSkip">Skip</string>
    <string name="tvSettingTheme">App Theme</string>
    <string name="tvSettingHardMode">Hard Mode (end game on wrong answer)</string>
    <string name="btnSettingSoundOn">Mute Sound Effects</string>
    <string name="btnSettingSoundOff">Turn on Sound Effects</string>
    <string name="question">Question Text</string>
    <string name="btnTweet">Tweet Highest Score</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_text_here">Enter text here..</string>
    <string name="enter_tweet_message">Enter tweet message</string>

    <string-array name="theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="difficulty">
        <item>Off</item>
        <item>On</item>
    </string-array>

</resources>
