<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSettingTheme"/>

    <Spinner
        android:id="@+id/spTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/theme" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSettingHardMode"/>

    <Spinner
        android:id="@+id/spDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/difficulty" />

    <Button
        android:id="@+id/btnSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSettingSoundOn"/>
</android.support.v7.widget.LinearLayoutCompat>