<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoresActivity">
    <TableLayout
        android:id="@+id/scoreHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scoreView">

        <TextView
            android:id="@+id/headerName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:text="@string/header_name" />

        <TextView
            android:id="@+id/headerScore"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="0.6"
            android:text="@string/header_score"/>
    </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/scoreView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/scoreHeader"
        app:layout_constraintBottom_toTopOf="@id/btnTweet"
        />

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scoreView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btnTweet"
        android:onClick="sendTweet"/>

</android.support.constraint.ConstraintLayout>